<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RadioAyah</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="unknown_track">Unknown Track</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="password">Password</string>
    <string name="title_activity_explore">Explore</string>
    <string-array name="LeftMenuItems">
        <item name="profile">profile</item>
        <item name="Explore">"Explore"</item>
        <item name="My_likes">My Likes</item>
        <item name="My_Playlists">My Playlists</item>
        <item name="All_reciters">All Reciters</item>
        <item name="Upload">Upload</item>
        <item name="Project">Project</item>
        <item name="Listening_Schedule">Listening Schedule</item>
        <item name="SwitchPlayer">Switch Live Radio</item>
        <item name="MyDownload">My Downloads</item>
        <item name="Change_language">Change Language</item>
        <item name="logout">Logout</item>
    </string-array>
    <string name="title_activity_listening">Listening</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="time_set">Set time</string>
    <string name="cancel">Cancel</string>
    <string name="time">Time : </string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_all_reciters">All Reciters</string>
    <string name="title_activity_sign_up">Radio Ayah</string>
    <string name="action_search">Search</string>
    <string name="title_activity_track_play">Track Details</string>
    <string name="title_activity_my_likes">My Likes</string>
    <string name="title_activity_qari_detail">Qari Detail</string>
    <string name="title_activity_upload">Upload</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_manage_schedule_fragment">ManageScheduleFragment</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="app_id">1811957572399803</string>
    <string name="qari_recitations">Qari Recitations</string>
    <string name="qari_name">Qari Name</string>
    <string name="surah_name">Surah Name</string>
    <string name="details">Details</string>
    <string name="qari_tracks">Qari Tracks</string>
    <string name="sign_up">Sign Up</string>
    <string name="username_mandatory">Username</string>
    <string name="last_name_mandatory">Last Name</string>
    <string name="email_address_mandatory">Email Address</string>
    <string name="password_mandatory">Password</string>
    <string name="confirm_password_mandatory">Confirm Password</string>
    <string name="track_details">Track Details</string>
    <string name="add_comment">Add Comment</string>
    <string name="create_new">CREATE NEW</string>
    <string name="playlists">Playlists</string>
    <string name="my_projects">MY PROJECTS</string>
    <string name="create_a_project">Create a project</string>
    <string name="project_name">Project Name</string>
    <string name="project_description">Project Description</string>
    <string name="create_project">Create Project</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="select_qari">Select Qari</string>
    <string name="juz">Juz</string>
    <string name="surah">Surah</string>
    <string name="verse">Verse</string>
    <string name="quran">Quran</string>
    <string name="search">Search</string>
    <string name="comment_here">Comment Here</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Type your email address for recovery of lost password.</string>
    <string name="email_address">Email Address</string>
    <string name="submit_request">Submit Request</string>
    <string name="my_playlists">MY PLAYLISTS</string>
    <string name="please_type">Please type a name to create a playlist.</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="first_name">First Name</string>
    <string name="first_name_mandatory">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="date_of_birth_mandatory">Date Of Birth</string>
    <string name="date_of_death_optional">Date of death</string>
    <string name="profile_link">Profile Link</string>
    <string name="profile_link_mandatory">Profile Link</string>
    <string name="biography">Biography</string>
    <string name="biography_mandatory">Biography</string>
    <string name="add_new_task">Add New Task</string>
    <string name="my_schedules">MY SCHEDULES</string>
    <string name="schedule_name">Schedule Name</string>
    <string name="select_surah">Select Surah</string>
    <string name="schedule_duration">Schedule Duration</string>
    <string name="start_time">Start Time</string>
    <string name="schedule_start_time_hh_mm_ss">Schedule Start Time (HH:MM:SS)</string>
    <string name="reminder">Reminder</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="update">Update</string>
    <string name="most_likes">Most Likes</string>
    <string name="please_add">Please add / invite members to your project.</string>
    <string name="user_email">User Email</string>
    <string name="search_user">Search User</string>
    <string name="done">Done</string>
    <string name="add_listening_plan">Add Listening Plan</string>
    <string name="schedule_start_time">Schedule Start Time</string>
    <string name="calculate_time">Calculate Time</string>
    <string name="add">ADD</string>
    <string name="manage">MANAGE</string>
    <string name="track_name">Track Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="record">Please Record an audio to upload.</string>
    <string name="recording">Record</string>
    <string name="play">Play</string>
    <string name="done_recording">Done Recording</string>
    <string name="upload_to_radio_ayah">Upload To Radio Ayah</string>
    <string name="title">Title</string>
    <string name="browse_file">Browse File</string>
    <string name="tags_seperated_by_hashtags">Tags (Seperated By Hashtags)</string>
    <string name="description">Description</string>
    <string name="downloadable">Downloadable</string>
    <string name="upload">Upload</string>
    <string name="type">Type</string>
    <string name="not_started">Not Started</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="name_here">Name Here</string>
    <string name="album">Album</string>
    <string name="juzz_name">Juzz Name</string>
    <string name="select_verse_range">Select Verse Range</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string-array name="languageType">
        <item>Select Language</item>
        <item>English</item>
        <item>فارسی</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>