<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    android:paddingBottom="20dp">
    <Button
        android:layout_width="match_parent"
        android:text="@string/forgot_password"
        android:textColor="#000"
        android:background="#FFF"
        android:textSize="18sp"
        android:id="@+id/dialog_heading"
        android:layout_height="50dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/email"
        android:textColor="@color/light_green_login_button"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/forgot_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="3dp" />

    <Button
        android:id="@+id/forgot_password_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_green_button"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/submit_request"
        android:textColor="#FFF" />
</LinearLayout>
