<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/playlist_buttons_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/add_new_playlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/bottomborder"
            android:text="@string/create_new"
            android:textSize="16sp"
            android:textColor="@color/light_green_login_button" />

        <Button
            android:id="@+id/manage_playlists"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/bottomborder"
            android:text="@string/my_playlists"
            android:textSize="16sp"
            android:textColor="@color/light_green_login_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playlist_buttons_holder"
        android:layout_margin="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/please_type"
        android:textColor="#000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_playlist_name"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/heading"
        android:layout_margin="5dp"
        android:maxLength="20"
        android:maxLines="1"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/playlist_name"
        android:paddingLeft="5dp"
        android:paddingStart="5dp" />

    <Button
        android:id="@+id/createPlaylist"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_playlist_name"
        android:layout_centerHorizontal="true"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_green_button"
        android:text="@string/create_playlist"
        android:textColor="#FFF" />
</RelativeLayout>