<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_project_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createProject"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/please_add"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_invite_members"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/add_project_heading"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/user_email"
        android:paddingLeft="5dp"
        android:paddingStart="5dp" />

    <Button
        android:id="@+id/inviteuser"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_invite_members"
        android:layout_centerHorizontal="true"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_green_button"
        android:text="@string/search_user"
        android:textColor="#FFF" />

    <ListView
        android:id="@+id/list_users_to_be_added"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inviteuser"></ListView>

    <Button
        android:id="@+id/done_editing"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_green_button"
        android:text="@string/done"
        android:textColor="#FFF" />
</RelativeLayout>