<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/thumb_profile_pic"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/silhouttee" />

        <TextView
            android:id="@+id/tv_signup_label112"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_green_login_button"
            android:text="@string/first_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/thumb_profile_pic" />

        <EditText
            android:id="@+id/et_fname"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_signup_label112"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/first_name_mandatory"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"></EditText>

        <TextView
            android:id="@+id/tv_signup_label113"
            android:layout_width="wrap_content"
            android:textColor="@color/light_green_login_button"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_fname"
            android:text="@string/last_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_lname"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_signup_label113"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/last_name_mandatory"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"></EditText>

        <TextView
            android:id="@+id/tv_signup_label114"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_lname"
            android:text="@string/city"
            android:textColor="@color/light_green_login_button"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_qari_city"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_signup_label114"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="City"
            android:inputType="textEmailAddress"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"></EditText>

        <TextView
            android:id="@+id/tv_signup_label115"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_qari_city"
            android:textColor="@color/light_green_login_button"
            android:text="@string/country"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/countries_dropdown"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/tv_signup_label115"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext" />

        <TextView
            android:id="@+id/tv_signup_label116"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/countries_dropdown"
            android:textColor="@color/light_green_login_button"
            android:text="@string/date_of_birth"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_qari_dob"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:maxLength="10"
            android:layout_below="@+id/tv_signup_label116"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/date_of_birth_mandatory"
            android:inputType="textEmailAddress"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"></EditText>

        <TextView
            android:id="@+id/tv_signup_label117"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_qari_dob"
            android:textColor="@color/light_green_login_button"
            android:text="@string/date_of_death_optional"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_qari_dod"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:maxLength="10"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_signup_label117"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/date_of_death_optional"
            android:inputType="textEmailAddress"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"></EditText>

        <TextView
            android:id="@+id/tv_signup_label118"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_qari_dod"
            android:text="@string/profile_link"
            android:textColor="@color/light_green_login_button"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_qari_link"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_signup_label118"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/profile_link_mandatory"
            android:inputType="textEmailAddress"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"></EditText>

        <TextView
            android:id="@+id/tv_signup_label119"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_qari_link"
            android:text="@string/biography"
            android:textColor="@color/light_green_login_button"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_qari_bio"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_signup_label119"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/biography_mandatory"
            android:inputType="textEmailAddress"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"></EditText>

        <Button
            android:id="@+id/submit_signup"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/et_qari_bio"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"
            android:layout_centerHorizontal="true"
            android:paddingRight="15dp"
            android:background="@drawable/rounded_green_button"
            android:onClick="signup"
            android:text="Add Qari"
            android:textColor="@color/white"></Button>
    </RelativeLayout>
</ScrollView>